--- a/app/src/main/res/layout/item_recipe_recommended.xml
+++ b/app/src/main/res/layout/item_recipe_recommended.xml
@@ -28,7 +28,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="20sp"
+            android:textSize="10sp"
+            android:maxLength="15"
             android:layout_marginBottom="30dp"
             android:layout_marginStart="20dp"
             android:text="@string/spagheti"
